--- a/indexs.html
+++ b/indexs.html
@@ -67,7 +67,7 @@
         <!-- User/Admin Toggle -->
         <div class="flex justify-end mb-6 space-x-2">
              <div class="relative w-full md:w-auto">
-                <input type="text" id="current-user-input" placeholder="Enter your name to filter..." class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-orange-500 transition-shadow">
+                <input type="text" id="current-user-input" placeholder="Enter your name to filter.." class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-orange-500 transition-shadow">
             </div>
             <button id="admin-login-btn" class="bg-orange-500 text-white font-medium py-2 px-4 rounded-lg hover:bg-orange-600 transition-colors duration-200 shadow-md">Admin Login</button>
         </div>
